--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,62 @@
-header, footer {
+body {
+  margin: 0;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  transition: all 0.15s ease-in-out 0s;
+}
+
+header {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  height: 46px;
+  padding-left: 150px;
+}
+
+.header-button {
+  position: relative;
+  height: 100%;
+  color: rgb(102, 117, 127);
+}
+
+.header-button:hover {
+  color: #0084b4;
+  cursor: pointer;
+}
+
+.header-button-label {
+  line-height: 46px;
+  position: absolute;
+  left: 30px;
+}
+
+.header-button i {
+  line-height: 46px;
+}
+
+footer {
   background-color: #e1e1e1;
+}
+
+@media (max-width: 600px) {
+  header {
+    padding-left: 0px;
+  }
+}
+
+/*
+SASS:
+background-color: rgba(179,220,237,1);
+background: @include filter-gradient(#b3dced, #bce0ee, horizontal);
+background: @include background-image(linear-gradient(left top, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%));
+*/
+.content {
+  position: absolute;
+  top: 46px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(179,220,237,1);
+  background: -moz-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(179,220,237,1)), color-stop(0%,   rgba(41,184,229,1)), color-stop(100%, rgba(188,224,238,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
 }
