--- a/css/app.css
+++ b/css/app.css
@@ -5,34 +5,71 @@ body {
 }
 
 header {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  border-bottom: 4px solid rgba(0, 0, 0, 0.15);
   height: 46px;
   padding-left: 150px;
+  padding-right: 150px;
 }
 
+.header-tab-container {
+}
+
+.header-button-container {
+  float: right;
+}
+
+.header-tab,
 .header-button {
   position: relative;
-  height: 100%;
-  color: rgb(102, 117, 127);
+  height: 42px;
+  display: inline-block;
 }
 
+.header-tab {
+  color: rgb(102, 117, 127);
+  border-bottom: 4px solid white;
+}
+
+.header-tab:hover,
 .header-button:hover {
-  color: #0084b4;
   cursor: pointer;
 }
 
-.header-button-label {
-  line-height: 46px;
-  position: absolute;
-  left: 30px;
+.header-tab:hover {
+  color: #0084b4;
+  border-bottom: 4px solid #0084b4;
 }
 
+.header-button {
+  background-color: #4ea8cc;
+  color: white;
+  border-radius: 8px;
+  margin-top: 2px;
+  margin-right: 2px;
+}
+
+.header-button:hover {
+  background-color: #0084b4;
+}
+
+.header-button:active {
+  background-color: #005d7e;
+}
+
+.header-tab i,
 .header-button i {
   line-height: 46px;
+  float: left;
+  margin-right: 4px;
+  margin-left: 16px;
 }
 
-footer {
-  background-color: #e1e1e1;
+.header-tab-label,
+.header-button-label {
+  line-height: 46px;
+  float: right;
+  margin-right: 16px;
+  margin-left: 4px;
 }
 
 @media (max-width: 600px) {
@@ -49,11 +86,11 @@ background: @include background-image(linear-gradient(left top, rgba(179,220,237
 */
 .content {
   position: absolute;
-  top: 46px;
+  top: 48px;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(179,220,237,1);
+  background: rgba(179, 220, 237, 1);
   background: -moz-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
   background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(179,220,237,1)), color-stop(0%,   rgba(41,184,229,1)), color-stop(100%, rgba(188,224,238,1)));
   background: -webkit-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
