--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Frosting';
+  src: url('/fonts/frosting-for-breakfast/Frosting-for-Breakfast_regular.otf');
+}
+
 body {
   margin: 0;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -90,10 +95,24 @@ background: @include background-image(linear-gradient(left top, rgba(179,220,237
   left: 0;
   right: 0;
   bottom: 0;
+  font-family: 'Frosting';
+  font-size: 48px;
   background: rgba(179, 220, 237, 1);
   background: -moz-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
   background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(179,220,237,1)), color-stop(0%,   rgba(41,184,229,1)), color-stop(100%, rgba(188,224,238,1)));
   background: -webkit-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
   background: -o-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
   background: -ms-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 0%, rgba(188,224,238,1) 100%);
+}
+
+.logo {
+  bottom: 0;
+  position: absolute;
+  right: 16px;
+  font-size: 52px;
+}
+
+.logo .subtitle {
+  margin-left: 8px;
+  font-size: 36px;
 }
