First version of layout for the Event tab for a larger resolution.

--- a/styles/app.less
+++ b/styles/app.less
@@ -1,6 +1,7 @@
-@import 'themes/bluish.colors.less';
+@import 'themes/default.colors.less';
 @import 'header.less';
 @import 'content.less';
+@import 'event.less';
 
 body {
   margin: 0;
