Active tab is highlighted.

--- a/styles/header.less
+++ b/styles/header.less
@@ -47,6 +47,10 @@ header {
   border-bottom: 4px solid @header-color-hover;
 }
 
+.header-tab.active {
+  border-bottom: 4px solid @header-color-hover;
+}
+
 .header-tab.disabled:hover {
   color: @header-color;
   border-bottom: 4px solid white;
