--- a/styles/event.less
+++ b/styles/event.less
@@ -8,6 +8,7 @@
   margin-top: 50px;
   padding: 16px;
   width: 600px;
+  position: relative;
   color: @details-color;
 
   label {
@@ -20,6 +21,18 @@
   .field {
     margin-top: 16px;
     input {
+    }
+  }
+
+  .unsaved-changes {
+    position: absolute;
+    display: none;
+    top: 4px;
+    right: 4px;
+    font-size: 1.5em;
+
+    &.has-changes {
+      display: inline-block;
     }
   }
 }
