Extracted Button component as it will be used on the Event tab and on the Participants tab.

--- a/styles/app.less
+++ b/styles/app.less
@@ -1,4 +1,5 @@
 @import 'themes/default.colors.less';
+@import 'widgets/button.less';
 @import 'header.less';
 @import 'content.less';
 @import 'event.less';
