Adds 'Save' and 'Cancel' button on the Event tab, changes the margins and paddings for the headers buttons.

--- a/styles/event.less
+++ b/styles/event.less
@@ -35,4 +35,18 @@
       display: inline-block;
     }
   }
+
+  footer {
+    margin-top: 16px;
+    height: 42px;
+
+    .fl-button {
+      float: right;
+      margin-right: 8px;
+
+      &:first-child {
+        margin-right: 0;
+      }
+    }
+  }
 }
