--- a/styles/header.less
+++ b/styles/header.less
@@ -7,6 +7,10 @@ header {
   height: 46px;
   padding-left: 150px;
   padding-right: 150px;
+
+  .fl-button {
+    margin-right: 8px;
+  }
 }
 
 .header-button-container {
