--- a/styles/widgets/button.less
+++ b/styles/widgets/button.less
@@ -27,6 +27,7 @@
   border-radius: 8px;
   margin-top: 2px;
   margin-right: 2px;
+  min-width: 80px;
 }
 
 .fl-button:hover {
@@ -48,13 +49,14 @@
 .fl-button i {
   line-height: 46px;
   float: left;
-  margin-right: 4px;
-  margin-left: 16px;
+  margin-left: 8px;
 }
 
 .fl-button-label {
-  line-height: 46px;
+  line-height: 42px;
   float: right;
-  margin-right: 16px;
-  margin-left: 4px;
+  margin-left: 8px;
+  margin-right: 8px;
+  min-width: 64px;
+  text-align: center;
 }
