--- a/styles/event.less
+++ b/styles/event.less
@@ -26,13 +26,14 @@
 
   .unsaved-changes {
     position: absolute;
-    display: none;
+    opacity: 0;
     top: 4px;
     right: 4px;
     font-size: 1.5em;
+    transition: all 0.5s ease;
 
     &.has-changes {
-      display: inline-block;
+      opacity: 1;
     }
   }
 
