- Introduced namespaces for constants for better readability - Role is read from the store at the top component and passed down to children so that they can customize themselves based on this role - Guest cannot edit event fields, gets read-only view

--- a/styles/event.less
+++ b/styles/event.less
@@ -15,7 +15,13 @@
     display: inline-block;
     margin-right: 16px;
     min-width: 80px;
+    height: 28px;
+    vertical-align: top;
     width: 20%;
+
+    &.field-value {
+      width: auto;
+    }
   }
 
   .field {
