Adds header for the Event details section.

--- a/styles/event.less
+++ b/styles/event.less
@@ -7,9 +7,22 @@
   margin-left: 150px;
   margin-top: 50px;
   padding: 16px;
+  padding-left: 32px;
   width: 600px;
   position: relative;
   color: @details-color;
+
+  header {
+    margin-bottom: 48px;
+    padding-left: 32px;
+    border-bottom: none;
+
+    .event-details-description {
+      font-size: 15px;
+      font-style: italic;
+      margin-left: 40px;
+    }
+  }
 
   label {
     display: inline-block;
