--- a/styles/event.less
+++ b/styles/event.less
@@ -1,4 +1,5 @@
 @details-color: @primary-color2;
+@field-border-color: @primary-color2;
 
 /* TODO: Support mobile resolution */
 .event-details {
@@ -41,7 +42,8 @@
   .field {
     margin-top: 16px;
     input,
-    textarea {
+    textarea,
+    .field-error-message {
       font-family: "Trebuchet MS", Helvetica, sans-serif;
       font-size: 14px;
       width: 60%;
@@ -49,6 +51,18 @@
       min-width: 60%;
       max-height: 120px;
       overflow-y: auto;
+      border-radius: 4px;
+      border: 1px solid @field-border-color;
+
+      &.error {
+        border: 1px solid @error-color;
+      }
+    }
+    .field-error-message {
+      border: none;
+      margin-left: 20%;
+      padding-left: 16px;
+      color: @error-color;
     }
   }
 
